Fix background break on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,11 @@
 }
 
 div.HomeDiv  {
+  /* fixed mobile view area cutoff... */
   width: 100vw;
-  height: 100vh
-  
+  min-height: 100vh;
+  height: 100%;
+  min-height: 100dvh; /* Dynamic viewport height for newer browsers */
 }
 
 .badge-blue-light {
